test/e2e/testdata/network/dynatrace-denial.yaml
apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: deny-all
  namespace: dynatrace
spec:
  outboundTrafficPolicy:
    mode: REGISTRY_ONLY
